<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DDGatve Math</string>
    <string name="hello_world">Sveiki Dudajeva Gatves rēķinātavā!
        Gatavojamies olimpiādēm.</string>
    <string name="action_settings">Iestatījumi</string>
    <string name="action_signin">Pieteikties</string>
    <string name="action_register">Reģistrēties</string>
    <string name="alpha_latin_latvian">aābcčdeēfgģhiījkķlļmnņoōpqrŗsštuūvwxyzžAĀBCČDEĒFGĢHIĪJKĶLĻMNŅOŌPQRŖSŠTUŪVWXYZŽ</string>
    <string name="alpha_letters"></string>
    <string name="button_browse_problems">Uzdevumu saraksts</string>
    <string name="button_send_register">Reģistrēties</string>
    <string name="sign_in_message">Ierakstīties ar Google+</string>
    <string name="sign_out">Izrakstīties</string>
    <string name="text_first_name">Vārds</string>
    <string name="text_last_name">Uzvārds</string>
    <string name="text_register_message">Izveidot jaunu kontu:</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="title_activity_register">Reģistrēties</string>
    <string name="text_password1">Parole (6-12 zīmes)</string>
    <string name="text_password2">Parole vēlreiz</string>
    <string name="text_email">E-pasts</string>

</resources>